aws/projects/Project-001-Roman-Numerals-Converter/cfn.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  
Parameters:
  KeyPair:
    Description: Select your key pair 
    Type: AWS::EC2::KeyPair::KeyName
Resources:
  myInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0022f774911c1d690
      InstanceType: t2.micro
      KeyName: !Ref KeyPair
      SecurityGroupIds:
        - !GetAtt  mySG.GroupId
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: 
        Fn::Base64: !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            FOLDER="https://raw.githubusercontent.com/msaidcevik/demo/master/Project-001-Roman-Numerals-Converter"
            cd /var/www/html
            wget $FOLDER/README.md
            wget $FOLDER/Project_001_.png
            wget $FOLDER/app.py
            wget $FOLDER/project-001-snapshot.png
            wget $FOLDER/templates/index.html
            wget $FOLDER/templates/result.html
            systemctl start httpd
            systemctl enable httpd
      
  mySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  
   
Outputs:
  Apachewebserverurl:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt myInstance.PublicDnsName
    Description: URL of KCS
